# ETL

./: .gitignore  README.md  REVIEW.md  docker-compose.yml
ai/: Dockerfile  pyproject.toml
ai/app/: main.py
api/: Dockerfile  pyproject.toml
api/app/: database.py  main.py  models.py
collector/: Dockerfile  pyproject.toml
collector/app/: database.py  extract.py  load.py  main.py  models.py  report.py  transform.py
