[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "fastapi>=0.135.1",
    "sentencepiece>=0.2.1",
    "torch>=2.10.0",
    "transformers>=4.40,<5.0",
    "uvicorn>=0.41.0",
]
